// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/number-keyboard/demo/basic.md correctly 1`] = `
<div
  class="domo-keyboard"
>
  <button
    class="m-button m-button-primary"
    style="margin-bottom:10px"
    type="button"
  >
    <div
      class="m-button-inner"
    >
      <span>
        唤起键盘, 有小数点
      </span>
    </div>
  </button>
  <div
    class="m-number-keyboard-wrapper"
  >
    <div
      class="m-popup m-popup-bottom"
    >
      <div
        class="m-popup-box"
        style="display:none"
      >
        <div
          class="m-number-keyboard"
        >
          <div
            class="m-number-keyboard-number"
          >
            <ul
              class="m-number-keyboard-number-list"
            >
              <li
                class="m-number-keyboard-number-item"
              >
                .
              </li>
              <li
                class="m-number-keyboard-number-item"
              />
              <li
                class="m-number-keyboard-number-item m-number-keyboard-number-item-slidedown"
              >
                <i
                  class="m-icon m-icon-keyboard"
                >
                  <svg
                    aria-hidden="true"
                    class=""
                    fill="currentColor"
                    height="1em"
                    width="1em"
                  >
                    <use
                      href="#icon-keyboard"
                    />
                  </svg>
                </i>
              </li>
            </ul>
          </div>
          <div
            class="m-number-keyboard-operate"
          >
            <ul
              class="m-number-keyboard-operate-list"
            >
              <li
                class="m-number-keyboard-operate-item m-number-keyboard-operate-item-delete"
              >
                <i
                  class="m-icon m-icon-backspace"
                >
                  <svg
                    aria-hidden="true"
                    class=""
                    fill="currentColor"
                    height="1em"
                    width="1em"
                  >
                    <use
                      href="#icon-backspace"
                    />
                  </svg>
                </i>
              </li>
              <li
                class="m-number-keyboard-operate-item m-number-keyboard-operate-item-confirm"
              >
                确定
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    class="m-button m-button-primary"
    type="button"
  >
    <div
      class="m-button-inner"
    >
      <span>
        唤起键盘, 无小数点
      </span>
    </div>
  </button>
  <div
    class="m-number-keyboard-wrapper"
  >
    <div
      class="m-popup m-popup-bottom"
    >
      <div
        class="m-popup-box"
        style="display:none"
      >
        <div
          class="m-number-keyboard"
        >
          <div
            class="m-number-keyboard-number"
          >
            <ul
              class="m-number-keyboard-number-list"
            >
              <li
                class="m-number-keyboard-number-item m-number-keyboard-number-item-no"
              />
              <li
                class="m-number-keyboard-number-item"
              />
              <li
                class="m-number-keyboard-number-item m-number-keyboard-number-item-slidedown"
              >
                <i
                  class="m-icon m-icon-keyboard"
                >
                  <svg
                    aria-hidden="true"
                    class=""
                    fill="currentColor"
                    height="1em"
                    width="1em"
                  >
                    <use
                      href="#icon-keyboard"
                    />
                  </svg>
                </i>
              </li>
            </ul>
          </div>
          <div
            class="m-number-keyboard-operate"
          >
            <ul
              class="m-number-keyboard-operate-list"
            >
              <li
                class="m-number-keyboard-operate-item m-number-keyboard-operate-item-delete"
              >
                <i
                  class="m-icon m-icon-backspace"
                >
                  <svg
                    aria-hidden="true"
                    class=""
                    fill="currentColor"
                    height="1em"
                    width="1em"
                  >
                    <use
                      href="#icon-backspace"
                    />
                  </svg>
                </i>
              </li>
              <li
                class="m-number-keyboard-operate-item m-number-keyboard-operate-item-confirm"
              >
                确定
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-value"
  />
</div>
`;

exports[`renders ./components/number-keyboard/demo/disorder.md correctly 1`] = `
<div
  class="domo-keyboard"
>
  <button
    class="m-button m-button-primary"
    type="button"
  >
    <div
      class="m-button-inner"
    >
      <span>
        唤起键盘
      </span>
    </div>
  </button>
  <div
    class="m-number-keyboard-wrapper"
  >
    <div
      class="m-popup m-popup-bottom"
    >
      <div
        class="m-popup-box"
        style="display:none"
      >
        <div
          class="m-number-keyboard"
        >
          <div
            class="m-number-keyboard-number"
          >
            <ul
              class="m-number-keyboard-number-list"
            >
              <li
                class="m-number-keyboard-number-item"
              >
                .
              </li>
              <li
                class="m-number-keyboard-number-item"
              />
              <li
                class="m-number-keyboard-number-item m-number-keyboard-number-item-slidedown"
              >
                <i
                  class="m-icon m-icon-keyboard"
                >
                  <svg
                    aria-hidden="true"
                    class=""
                    fill="currentColor"
                    height="1em"
                    width="1em"
                  >
                    <use
                      href="#icon-keyboard"
                    />
                  </svg>
                </i>
              </li>
            </ul>
          </div>
          <div
            class="m-number-keyboard-operate"
          >
            <ul
              class="m-number-keyboard-operate-list"
            >
              <li
                class="m-number-keyboard-operate-item m-number-keyboard-operate-item-delete"
              >
                <i
                  class="m-icon m-icon-backspace"
                >
                  <svg
                    aria-hidden="true"
                    class=""
                    fill="currentColor"
                    height="1em"
                    width="1em"
                  >
                    <use
                      href="#icon-backspace"
                    />
                  </svg>
                </i>
              </li>
              <li
                class="m-number-keyboard-operate-item m-number-keyboard-operate-item-confirm"
              >
                支付
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-value"
  />
</div>
`;

exports[`renders ./components/number-keyboard/demo/simple.md correctly 1`] = `
<div
  class="domo-keyboard"
>
  <button
    class="m-button m-button-primary"
    type="button"
  >
    <div
      class="m-button-inner"
    >
      <span>
        唤起键盘
      </span>
    </div>
  </button>
  <div
    class="m-number-keyboard-wrapper"
  >
    <div
      class="m-popup m-popup-bottom"
    >
      <div
        class="m-popup-box"
        style="display:none"
      >
        <div
          class="m-number-keyboard"
        >
          <div
            class="m-number-keyboard-number"
          >
            <ul
              class="m-number-keyboard-number-list"
            >
              <li
                class="m-number-keyboard-number-item m-number-keyboard-number-item-no"
              />
              <li
                class="m-number-keyboard-number-item"
              />
              <li
                class="m-number-keyboard-number-item m-number-keyboard-number-item-delete"
              >
                <i
                  class="m-icon m-icon-backspace"
                >
                  <svg
                    aria-hidden="true"
                    class=""
                    fill="currentColor"
                    height="1em"
                    width="1em"
                  >
                    <use
                      href="#icon-backspace"
                    />
                  </svg>
                </i>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-value"
  />
</div>
`;
